fix(safari): prevent text from flowing offscreen

--- a/src/components/main/compose/write/styles.scss
+++ b/src/components/main/compose/write/styles.scss
@@ -1,40 +1,39 @@
 // Styles are globally scoped, please use unique names and nested selectors to avoid conflicts.
 
 .write {
-    align-items: end;
-    display: inline-flex;
+  align-items: end;
+  display: flex;
+  flex-grow: 1;
+  padding: 1rem;
+  -webkit-user-select: none; /* Safari */
+  user-select: none; /* Non-prefixed version, currently */
+
+  .extension-holder {
+    margin-right: 1rem;
+  }
+
+  .input {
+    border: 1px solid transparent;
+    border-radius: 20px;
+    box-sizing: border-box;
+    color: var(--theme-text);
     flex: 1;
-    flex-direction: row;
-    padding: 1rem;
-    -webkit-user-select: none; /* Safari */
-    user-select: none; /* Non-prefixed version, currently */
+    margin: 0 1rem;
+    min-height: 40px;
+    // TODO: Need help making this prettier, textareas suck
+    padding: 0.75rem 1rem 0 1rem;
+    resize: none;
+    transition: height 0.2s, border 0.2s;
+    word-break: break-all;
+    word-wrap: break-word;
+    -webkit-user-select: text; /* Safari */
+    user-select: text; /* Non-prefixed version, currently */
+  }
 
-    .extension-holder {
-        margin-right: 1rem;
-    }
-
-    .input {
-        border: 1px solid transparent;
-        border-radius: 20px;
-        box-sizing: border-box;
-        color: var(--theme-text);
-        flex: 1;
-        margin: 0 1rem;
-        min-height: 40px;
-        // TODO: Need help making this prettier, textareas suck
-        padding: .75rem 1rem 0 1rem;
-        resize: none;
-        transition: height .2s, border .2s;
-        word-break: break-all;
-        word-wrap: break-word;
-        -webkit-user-select: text; /* Safari */
-        user-select: text; /* Non-prefixed version, currently */
-    }
-
-    .input:focus {
-        border: 1px solid var(--theme-primary);
-        margin: 0 1rem;
-        outline: none;
-        padding: .75rem 1rem 0 1rem;
-    }
+  .input:focus {
+    border: 1px solid var(--theme-primary);
+    margin: 0 1rem;
+    outline: none;
+    padding: 0.75rem 1rem 0 1rem;
+  }
 }
